31 May 2010: Wouter
	- Fix AD flag handling, it could in some cases mistakenly copy the AD 
	  flag from upstream servers.

28 May 2010: Wouter
	- iana portlist updated.
	- parent-child disagreement approach altered.  Older fixes are
	  removed in place of a more exhaustive search for misconfigured data
	  available via the parent of a delegation.
	  This is designed to be throttled by cache entries, with TTL from the
	  parent if possible.  Additionally the loop-counter is used.
	  It also tests for NS RRset differences between parent and child.
	  The fetch of misconfigured data should be more reliable and thorough.
	  It should work reliably even with no or only partial data in cache.
	  Data received from the child (as always) is deemed more
	  authoritative than information received from the delegation parent.
	  The search for misconfigured data is not performed normally.

26 May 2010: Wouter
	- Contribution from Migiel de Vos (Surfnet): nagios patch for
	  unbound-host, in contrib/ (in the source tarball).  Makes
	  unbound-host suitable for monitoring dnssec(-chain) status.

21 May 2010: Wouter
	- EDNS timeout code will not fire if EDNS status already known.
	- EDNS failure not stored if EDNS status known to work.

19 May 2010: Wouter
	- Fix resolution for domains like safesvc.com.cn.  If the iterator
	  can not recurse further and it finds the delegation in a state
	  where it would otherwise have rejected it outhand if so received
	  from a cache lookup, then it can try to ask higherup (with loop
	  protection).
	- Fix comments in iter_utils:dp_is_useless.

18 May 2010: Wouter
	- Fix various compiler warnings from the clang llvm compiler.
	- iana portlist updated.

6 May 2010: Wouter
	- Fix bug#308: spelling error in variable name in parser and lexer.

4 May 2010: Wouter
	- Fix dnssec-missing detection that was turned off by server selection.
	- Conforms to draft-ietf-dnsop-default-local-zones-13.  Added default