@@ -217,8 +217,10 @@ alloc_special_obtain(struct alloc_cache* alloc)
 	}
 	/* allocate new */
 	prealloc(alloc);
-	if(!(p = (alloc_special_t*)malloc(sizeof(alloc_special_t))))
-		fatal_exit("alloc_special_obtain: out of memory");
+	if(!(p = (alloc_special_t*)malloc(sizeof(alloc_special_t)))) {
+		log_err("alloc_special_obtain: out of memory");
+		return NULL;
+	}
 	alloc_setup_special(p);
 	p->id = alloc_get_id(alloc);
 	return p;
